<resources>
    <string name="ac_error_prefix">"Activation error: "</string>
    <string name="ac_more_than_one_candidate_of_lice_file">"there is more than one candidate of license file: "</string>
    <string name="ac_no_license_file_found">no license file found neither in `%1$s`, nor in `%2$s`.</string>
    <string name="ac_no_network_connection">no network connection available. Check connection and try again.</string>
    <string name="ac_server_response_no_result_data">the server response contains no result data. Status = %1$s.</string>
    <string name="ac_server_response_not_ok">bad server response: %1$d %2$s.</string>
	<string name="agw_basic_instruction">Add agw_basic_instruction string to your project.</string>
	<string name="aro_colour_depth">Colour depth</string>
    <string name="aro_default_controls_name">Default controls</string>
    <string name="aro_description">Run configuration</string>
    <string name="aro_locale">Locale</string>
    <string name="aro_reset_to_defaults">Reset to defaults</string>
    <string name="aro_screen_resolution">Screen resolution</string>
	<string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
	<string name="buy_promo_button_text">GET ACCESS NOW</string>
    <string name="buy_promo_header_text">Buy a lifetime access to ExaGear Strategies</string>
    <string name="buy_promo_no_price">Unable to get price information, check internet connection.</string>
	<string name="character_counter_pattern">%1$d / %2$d</string>
	<string name="cil_installed_to_sdcard">It seems that you have installed ExaGear to the SD card. Please try to move ExaGear to the internal memory.</string>
	<string name="civ3_shift_off">Shift OFF</string>
    <string name="civ3_shift_on">Shift ON</string>
	<string name="cl_retry">Retry</string>
    <string name="cl_retry_message">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="cl_unlicensed_message">This application is not licensed. Please purchase it from Google Play Store.</string>
	<string name="cont_popup_clone">Clone</string>
	<string name="cont_popup_delete">Delete</string>
	<string name="cont_popup_installpkg">Install packages</string>
	<string name="cont_popup_properties">Properties</string>
	<string name="cont_popup_runexplorer">Run Explorer</string>
	<string name="cont_popup_runlinuxenv">Run Linux x86 Environment</string>
	<string name="cont_run_guide_civ3_body">"&lt;big>&lt;b>To run Civilization III you must do following:&lt;/b>&lt;/big> &lt;p>&lt;b>1.&lt;/b> Open \"Manage Containers\" menu.&lt;/p> &lt;p>&lt;b>2.&lt;/b> Run Explorer in container by clicking \"Run Explorer\" in container's context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p> &lt;p>&lt;b>3.&lt;/b> Locate game installation folder. Go to \"Contest\" folder.&lt;/p> &lt;p>&lt;b>4.&lt;/b> Find \"Civ3Conquests.exe\", right click on it (long tap) and select \"Create link\".&lt;/p> &lt;p>&lt;b>5.&lt;/b> Now you can run Civilization III from Desktop menu by clicking \"Civ3Conquests\".&lt;/p>"</string>
    <string name="cont_run_guide_civ3_header">Civilization III run guide</string>
    <string name="cont_run_guide_divine_divinity_body">&lt;b>To run Divine Divinity you must do following:&lt;/b> &lt;p>&lt;b>1.&lt;/b> Locate Divine Divinity folder in Start Menu and run \"Settings\".&lt;/p> &lt;p>&lt;b>2.&lt;/b> Select \"Software\" under \"New rendering\".&lt;/p> &lt;p>&lt;b>3.&lt;/b> Select \"800 x 600\" under \"Preferred display\".&lt;/p> &lt;p>&lt;b>4.&lt;/b> Press \"Apply &amp; Close\" button.&lt;/p> &lt;p>&lt;b>5.&lt;/b> Now you can run Divine Divinity from \"Desktop\" menu.&lt;/p></string>
    <string name="cont_run_guide_divine_divinity_header">Divine Divinity run guide</string>
    <string name="cont_run_guide_fallout2_body">"&lt;b>To run Fallout 2 you must do following:&lt;/b> &lt;p>&lt;b>1.&lt;/b> Open \"Manage Containers\" menu.&lt;/p> &lt;p>&lt;b>2.&lt;/b> Run Explorer in container by clicking \"Run Explorer\" in container's context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p> &lt;p>&lt;b>3.&lt;/b> Locate game installation folder.&lt;/p> &lt;p>&lt;b>4.&lt;/b> Find \"fallout2.exe\", right click on it (long tap) and select \"Create link\".&lt;/p> &lt;p>&lt;b>5.&lt;/b> Now you can run Fallout 2 from \"Desktop\" menu by clicking \"fallout2\".&lt;/p>"</string>
    <string name="cont_run_guide_fallout2_header">Fallout 2 run guide</string>
    <string name="cont_run_guide_fallout_body">"&lt;b>To run Fallout you must do following:&lt;/b> &lt;p>&lt;b>1.&lt;/b> Open \"Manage Containers\" menu.&lt;/p> &lt;p>&lt;b>2.&lt;/b> Run Explorer in container by clicking \"Run Explorer\" in container's context menu (container name can be found under shortcut name on \"Desktop\" or \"Start Menu\").&lt;/p> &lt;p>&lt;b>3.&lt;/b> Locate game installation folder.&lt;/p> &lt;p>&lt;b>4.&lt;/b> Find \"falloutw.exe\", right click on it (long tap) and select \"Create link\".&lt;/p> &lt;p>&lt;b>5.&lt;/b> Now you can run Fallout from \"Desktop\" menu by clicking \"falloutw\".&lt;/p>"</string>
    <string name="cont_run_guide_fallout_header">Fallout run guide</string>
    <string name="copy_wine_prefix_failed">Copy operation failed. Is there enough free space?</string>
    <string name="cpi_header_label">Choose the option to start playing</string>
    <string name="cpi_lifetime_rules">&lt;html> &lt;head>&lt;meta http-equiv=content-type content=text/html; charset=UTF-8>&lt;/head> &lt;body> &lt;h3>Purchasing a lifetime access to ExaGear Strategies&lt;/h3> &lt;p> To play your favorite Windows games on Android, you need to pay for a full lifetime access to ExaGear Strategies. &lt;/p> &lt;p> What you are paying for:&lt;br> - License for using our unique technology, which aims to bring your favorite Windows PC games to your Android device.&lt;br> - Controls for PC games, optimized for playing on the touchscreens of Android devices. &lt;/p> &lt;/body> &lt;/html></string>
    <string name="cpi_run_trial_button_label">FREE trial access (till %1$s)</string>
    <string name="cpi_subs_info">&lt;html> &lt;head>&lt;meta http-equiv=content-type content=text/html; charset=UTF-8>&lt;/head> &lt;body> &lt;h3>Get charged monthly for the access to ExaGear Strategies&lt;/h3> &lt;p> 1. Buying the subscription, you get an instant and unlimited access to the game via ExaGear Strategies for the duration of 1 month. &lt;/p> &lt;p> 2. You are charged automatically starting from the second month of your subscription. &lt;/p> &lt;p> 3. You can view your subscription status and cancel it any time via your &lt;b>Google Play&lt;/b> app account. Just got to &lt;b>Menu → Subscriptions&lt;/b>, choose the subscription and cancel it with a single tap. &lt;/p> &lt;p> 4. Cancelling the subscription, you stop being automatically charged on the next month, when you current subscription period is expired. Still, the subscription stays valid until the end of the current period. &lt;/p> &lt;/body> &lt;/html></string>
    <string name="cpi_trial_rules">"&lt;html> &lt;head>&lt;meta http-equiv=content-type content=text/html; charset=UTF-8>&lt;/head> &lt;body> &lt;h3>What is a FREE Trial access to ExaGear Strategies?&lt;/h3> &lt;p> It is a 3-day trial period during which you have a &lt;b>FREE&lt;/b> full access to ExaGear Strategies and play your favorite Windows PC games without any limits. &lt;/p> &lt;h3>The FREE Trial period terms:&lt;/h3> &lt;p> 1. The trial period is valid for &lt;b>3 days&lt;/b> since the moment of it's activation. &lt;/p> &lt;p> 2. When you re-install the app after the trial expiry date, the trial period won’t occur anymore on your device. &lt;/p> &lt;p> 3. Each time you launch the app, a 10-minutes free trial session is started. After the 10 minutes of playing you have to restart the session to keep on. &lt;/p> &lt;/body> &lt;/html>"</string>
	<string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="directory_is_occupied">Directory is occupied</string>
	<string name="ed_list_empty">[Empty]</string>
    <string name="ed_main_menu_desktop">Desktop</string>
    <string name="ed_main_menu_help">Help</string>
    <string name="ed_main_menu_install_new">Install New</string>
    <string name="ed_main_menu_select_container">Manage Containers</string>
    <string name="ed_main_menu_settings">Settings</string>
    <string name="ed_main_menu_start_menu">Start Menu</string>
	<string name="ed_main_menu_advanced_options">Advanced Options</string>
    <string name="expand_button_title">Advanced</string>
	<string name="fail_to_configure">Failed to configure x86 image</string>
    <string name="fail_to_unpack_zip">Failed to unpack zip archive</string>
    <string name="fal_sync">Sync</string>
    <string name="fallout2_failed_to_fixup_cfg">Failed to fixup fallout2.cfg</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
	<string name="rate_later">Later</string>
    <string name="rate_me">Please, rate this application on Google Play</string>
    <string name="rate_now">Rate</string>
</resources>