<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="@drawable/title_bar_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/aro_description" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="0">
                <TableRow android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" />
                </TableRow>
                <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aro_screen_resolution" android:layout_weight="1.0" />
                    <TextView android:layout_gravity="center_vertical" android:id="@+id/aro_screen_resolution" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <ImageButton android:layout_gravity="right" android:id="@+id/aro_change_screen_resolution" android:background="@android:color/transparent" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/expand" android:scaleType="fitCenter" android:onClick="onChangeScreenResolutionClicked" />
                </TableRow>
                <TableRow android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" />
                </TableRow>
                <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aro_colour_depth" android:layout_weight="1.0" />
                    <TextView android:layout_gravity="center_vertical" android:id="@+id/aro_colour_depth" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <ImageButton android:layout_gravity="right" android:id="@+id/aro_change_colour_depth" android:background="@android:color/transparent" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/expand" android:scaleType="fitCenter" android:onClick="onChangeColourDepthClicked" />
                </TableRow>
                <TableRow android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" />
                </TableRow>
                <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aro_locale" android:layout_weight="1.0" />
                    <TextView android:layout_gravity="center_vertical" android:id="@+id/aro_locale" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <ImageButton android:layout_gravity="right" android:id="@+id/aro_change_locale" android:background="@android:color/transparent" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/expand" android:scaleType="fitCenter" android:onClick="onChangeLocaleClicked" />
                </TableRow>
                <TableRow android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" />
                </TableRow>
                <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aro_default_controls_name" android:layout_weight="1.0" />
                    <TextView android:layout_gravity="center_vertical" android:id="@+id/aro_default_controls_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <ImageButton android:layout_gravity="right" android:id="@+id/aro_change_default_controls_name" android:background="@android:color/transparent" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/expand" android:scaleType="fitCenter" android:onClick="onChangeDefaultControlsNameClicked" />
                </TableRow>
                <TableRow android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" />
                </TableRow>
            </TableLayout>
        </ScrollView>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aro_reset_to_defaults" android:layout_weight="0.0" android:onClick="onResetToDefaultsClicked" />
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_weight="0.0" android:onClick="onOKClicked" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
